Integrated django admin into timekeeper main page, fixed a few alignment issues

--- a/timekeeper/static/css/home.css
+++ b/timekeeper/static/css/home.css
@@ -1,7 +1,7 @@
 #brand{
     height:100%;
 }
-#header{
+#sidebar_header{
     margin-bottom:0;
     padding-top:1em;
     color:whitesmoke;
